# rigid

./: .gitignore  .gitmodules  CMakeLists.txt  rigid.h
cmake/: rigidConfig.cmake
src/: rigid_array_list.c  rigid_array_list_utils.c  rigid_array_list_utils.h  rigid_list.c  rigid_list_internal.c  rigid_list_internal.h  rigid_list_utils.c  rigid_sort.c  rigid_stack.c
tests/: array_list_test.c  array_list_utils_test.c  list_internal_test.c  list_test.c  list_utils_test.c  sort_test.c
